--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -13,7 +13,7 @@
     <body>
         {% block styles%}
             {{ super() }}
-            <link rel="stylesheet" href="{{url_for('static',filename='css/movie.css')}}">
+            <link rel="stylesheet" href="{{url_for('static',filename='movie.css')}}">
         {% endblock %}
         
         <!-- Content block -->
@@ -27,11 +27,11 @@
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
                     <h3>{{ movie.title }}</h3>
-
+        
                     <p class="overview"> {{ movie.overview }}</p>
+        
                     <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
-
-
+                    <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
                 </div>
             </div>
 
