--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -3,7 +3,7 @@
 
 {% block styles%}
     {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='movie.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/movie.css')}}">
 {% endblock %}
 
 <!-- Content block -->
